# SmartCommand

./: AUTHORS  COMMAND  COPYING  Drivers  Makefile  Makefile.am  Makefile.in  README  README.md  SmartCommand.c  SmartFunc.c  config.h  config.h.in  config.status  configure  configure.ac
.deps/: SmartCommand.Po  SmartFunc.Po
PCSC/: SmartCommand.h
autom4te.cache/: output.0  requests  traces.0  traces.1
